--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div align="center">
-    <h1>Congratulations!</h1>
+    <h1>This is a demo website for devops testing</h1>
     <h2>Welocome to prashant vlog</h2>
     <p>For next steps, read the AWS CodePipeline Documentation.</p>
   </div>
